# english-bot

./: .gitignore  Dockerfile  README.md  bot_proxy.py  dict_parser.py  docker-compose.yml  populate_dict.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: main.py
app/api/: deps.py  routes.py
app/core/: config.py
app/crud/: crud_dictionary.py  crud_users.py
app/db/: base.py
app/models/: dictionary.py  users.py
app/schemas/: dictionary.py  tg_updated.py
app/tests/: conftest.py  test_routes.py
migrations/: env.py
migrations/versions/: 8b26c075a088_add_in_progress_field.py  8e3a692efa1f_added_required_tables.py  901a8fc8cfb8_add_user_words_table.py  d6ddf1b40bf2_add_usage_mode.py  dff9ad341f06_add_required_tables.py  e0be76076ca2_added_users_table.py
