[tool.poetry]
name = "learn-english-bot"
version = "0.1.0"
description = ""
authors = ["NeverWalkAloner <neverwalkaloner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.75.1"
pyTelegramBotAPI = "^4.4.0"
SQLAlchemy = "^1.4.35"
psycopg2 = "^2.9.3"
alembic = "^1.7.7"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
